<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:elevation="5dp" tools:targetApi="lollipop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/image_skillIQ"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/string_skill_iq_badge"
                android:scaleType="centerCrop"
                android:src="@drawable/skill_iq"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/student_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_student_name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_skillIQ"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/SkillIQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/string_string_skilliq_country"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/student_name"
                app:layout_constraintStart_toStartOf="@+id/student_name"
                app:layout_constraintTop_toBottomOf="@+id/student_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>